--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles.css>
 <title>Welcome to 420-N13-LA</title>
 <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,26 +24,3 @@ I broke my arm this summer.</pre>
 
 </body>
 </html>
-<style>
-
-@import url('https://fonts.googleapis.com/css?family=Manjari&display=swap');
-
-body {
-  background-color: lightblue;
-}
-
-h1 {
-  color: red;
-  text-align: center;
-  font-family: 'Manjari', sans-serif;
-}
-
-h2 {
-  color: blue;
-  text-align: left;
-}
-
-p {
-  font-size: 20px;
-}
-</style>
